Add sequences for order and order item generation